--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </section>
-  <section class="pb-52 bg-darkbg p-10 bg-[url('..\assests\bg_img_nuts.png')]">
+  <section class="pb-52 bg-darkbg p-10 topsells">
     <h1 class="text-4xl text-center text-textoff font-bold ">Top Sellers</h1>
     <div class="cards relative flex justify-center py-10 flex-wrap gap-5 ">
       <div class="group relative w-72 rounded-2xl overflow-hidden bg-darkbg border border-amber-50/50">
@@ -91,7 +91,7 @@
   </section>
   <footer class="bg-black">
     <div class="text-center text-textmuted p-10 text-2xl">
-      <p>Design and Developed by <a href="#">Santhosh.V</a> </p>
+      <p>Design and Developed by <a href="https://github.com/santhosh-v11/Coffeeshop" class="text-textoff">Santhosh.V</a> </p>
     </div>
 
   </footer>
