ui:Added location section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
     </div>
     </div>
   </section>
+  <section class="location bg-locationbg p-5">
+    <h2 class="text-4xl font-bold text-center pt-5">Visit Us</h2>
+    <p class="text-center">Say Hello to Us!</p>
+    <div class="flex space-x-10 justify-center pt-10">
+      <!-- <div class="h-full"><iframe src="https://www.google.com/maps/place/Kollidam,+Tamil+Nadu+609102/@11.3304481,79.708397,14.73z/data=!4m6!3m5!1s0x3a54dd4641dd689b:0xba51bbf0d0417c9a!8m2!3d11.3306531!4d79.7203565!16s%2Fg%2F12xqc5pc7?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" frameborder="0"></iframe></div> -->
+      <div class="flex  gap-5">
+        <div class="text-textoff bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
+          <h2 class="uppercase text-2xl text-center border-b">Working Hours</h2>
+          <p class="pt-1">Weekdays - 5AM to 10PM</p>
+          <p>Weekends - 7AM to 3AM</p>
+        </div>
+        <div class="text-textoff w-[220px] bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
+          <h2 class="text-center pb-2"> <i class="fa-solid fa-location-dot"></i> Location</h2>
+          <p class="text-center">10,AnnaNagar</p>
+          <p class="text-center">Chidhambaram</p>
+        </div>
+      </div>
+    </div>
+  
+  </section>
   <footer class="bg-black">
     <div class="text-center text-textmuted p-10 text-2xl">
       <p>Design and Developed by <a href="https://github.com/santhosh-v11/Coffeeshop" class="text-textoff">Santhosh.V</a> </p>
