--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
     </div>
     </div>
   </section>
-  <section class="location bg-locationbg p-5">
+<section class="location bg-locationbg p-5">
     <h2 class="text-4xl font-bold text-center pt-5">Visit Us</h2>
     <p class="text-center">Say Hello to Us!</p>
     <div class="flex space-x-10 justify-center pt-10">
-      <!-- <div class="h-full"><iframe src="https://www.google.com/maps/place/Kollidam,+Tamil+Nadu+609102/@11.3304481,79.708397,14.73z/data=!4m6!3m5!1s0x3a54dd4641dd689b:0xba51bbf0d0417c9a!8m2!3d11.3306531!4d79.7203565!16s%2Fg%2F12xqc5pc7?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" frameborder="0"></iframe></div> -->
-      <div class="flex  gap-5">
+      <div class="h-full"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31296.466553299593!2d79.708397!3d11.3304481!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54dd4641dd689b%3A0xba51bbf0d0417c9a!2sKollidam%2C%20Tamil%20Nadu%20609102!5e0!3m2!1sen!2sin!4v1766146767574!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+      <div class="flex flex-col justify-center gap-5">
         <div class="text-textoff bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
           <h2 class="uppercase text-2xl text-center border-b">Working Hours</h2>
           <p class="pt-1">Weekdays - 5AM to 10PM</p>
           <p>Weekends - 7AM to 3AM</p>
         </div>
-        <div class="text-textoff w-[220px] bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
+        <div class="text-textoff  bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
           <h2 class="text-center pb-2"> <i class="fa-solid fa-location-dot"></i> Location</h2>
-          <p class="text-center">10,AnnaNagar</p>
-          <p class="text-center">Chidhambaram</p>
+          <p>10,AnnaNagar</p>
+          <p>Chidhambaram</p>
         </div>
       </div>
     </div>
