--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="text-3xl font-semibold">SunCafe</div>
       <div class="flex space-x-16 font-semibold max-sm:hidden ">
         <a href="#about">AboutUS</a>
-        <a href="#">Menu</a>
-        <a href="#">Visit Us</a>
+        <a href="#menu">Menu</a>
+        <a href="#visit">Visit Us</a>
       </div>
       <div class="md:hidden">
         <i class="fa-solid fa-bars"></i>
@@ -64,7 +64,7 @@
       </div>
     </div> -->
   </section>
-  <section class=" bg-darkbg p-10 topsells">
+  <section class=" bg-darkbg p-10 topsells" id="menu">
     <h1 class="text-4xl text-center text-textoff font-bold py-5">Top Sellers</h1>
     <div class="cards relative flex justify-center py-10 flex-wrap gap-5 bg-darkbg/50 backdrop-blur-sm rounded-4xl ">
       <div class="group relative w-72 rounded-2xl overflow-hidden bg-darkbg border border-amber-50/90">
@@ -145,7 +145,7 @@
     </div>
     </div>
   </section>
-<section class="location bg-locationbg p-5">
+<section class="location bg-locationbg p-5" id="visit">
     <h2 class="text-4xl font-bold text-center pt-5">Visit Us</h2>
     <p class="text-center">Say Hello to Us!</p>
     <div class="flex space-x-10 justify-center pt-10">
