fix:ui alignment

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-golden/80 py-5">
+  <section class="bg-golden py-5">
     <h2 class="text-4xl font-bold text-center">Our Menu</h2>
     <div class="mx-auto items-center flex-col flex justify-center py-10 relative">
       <ul class="flex flex-wrap gap-5 justify-center">
@@ -145,12 +145,15 @@
     </div>
     </div>
   </section>
-<section class="location bg-locationbg p-5" id="visit">
-    <h2 class="text-4xl font-bold text-center pt-5">Visit Us</h2>
-    <p class="text-center">Say Hello to Us!</p>
-    <div class="flex space-x-10 justify-center pt-10">
-      <div class="h-full"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31296.466553299593!2d79.708397!3d11.3304481!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54dd4641dd689b%3A0xba51bbf0d0417c9a!2sKollidam%2C%20Tamil%20Nadu%20609102!5e0!3m2!1sen!2sin!4v1766146767574!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-      <div class="flex flex-col justify-center gap-5">
+<section class="location bg-dark/50 p-5 mt-0.5" id="visit">
+    <h2 class="text-4xl font-bold text-center  pt-5"><i class="fa-solid fa-location-dot"></i>Visit Us </h2>
+    
+    <div class="flex space-x-10 justify-center items-center pt-10 flex-wrap">
+      <div class="h-full pl-10">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31296.466553299593!2d79.708397!3d11.3304481!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54dd4641dd689b%3A0xba51bbf0d0417c9a!2sKollidam%2C%20Tamil%20Nadu%20609102!5e0!3m2!1sen!2sin!4v1766146767574!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="max-md:w-100 max-sm:w-[320px] items-center" ></iframe>
+      </div>
+      <div class="flex flex-col justify-center gap-5 max-sm:pt-5">
+        <p class="text-center text-lg">Come and say Hello to Us !</p>
         <div class="text-textoff bg-darkbg/50 p-5 rounded-2xl border border-amber-50/90">
           <h2 class="uppercase text-2xl text-center border-b">Working Hours</h2>
           <p class="pt-1">Weekdays - 5AM to 10PM</p>
