fix:mobile screen

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="lg:h-fit bg-darkbg text-textoff pb-0 p-10" id="about">
     <h2 class="text-center text-4xl font-bold">About Us</h2>
     <div class="grid grid-cols-3 max-md:grid-cols-1 py-5">
-      <div class="w-80 h-80 mx-auto">
+      <div class="w-80 h-80 max-md:w-72 mx-auto">
         <img src="./assests/about.jpeg"  class="rounded-4xl" alt="">
       </div>
       <div class="flex flex-col justify-center col-span-2 p-5">
