--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     
 
   </header>
-  <section class="lg:h-fit bg-darkbg text-textoff pb-0 p-10" id="about">
+  <section class="lg:h-fit bg-darkbg text-textoff pb-0 md:p-10" id="about">
     <h2 class="text-center text-4xl font-bold">About Us</h2>
-    <div class="grid grid-cols-3 max-md:grid-cols-1 py-5">
-      <div class="w-80 h-80 max-md:w-72 mx-auto">
+    <div class="grid grid-cols-3 max-lg:grid-cols-1 py-5 mx-auto ">
+      <div class="w-80 h-80 max-sm:w-64 mx-auto">
         <img src="./assests/about.jpeg"  class="rounded-4xl" alt="">
       </div>
-      <div class="flex flex-col justify-center col-span-2 p-5">
+      <div class="flex flex-col justify-center col-span-2 p-5 max-sm:p-1">
         <span class="italic text-lg font-extralight text-center">Great coffee is our passion and we want to serve it with you ! </span>
-        <p class="text-3xl pt-2 line-clamp-4">It's been 2years since we started
+        <p class="text-3xl pt-2 line-clamp-4 tracking-wide ">It's been 2years since we started
           SunCafe with passion for real Caffine.we choosen carefully a imported coffee beans sourced from trusted farms
           so we make sure every cup delivers rich flavor and consistent quality.Our passion made our coffee to more
           speacial.First we started on small shop with good ambient and mainly focusing on serve quality coffee.Within a
