--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-darkbg">
-  <header class="h-dvh p-10 min-h-screen bg-[url('..//assests/herobanner.jpg')] bg-cover bg-center bg-no-repeat min-[2000px]:p-20 ">
+  <header class="h-dvh p-10 min-h-screen bg-[url('..//assests/herobannercompressed.jpg')] bg-cover bg-center bg-no-repeat min-[2000px]:p-20 ">
     <nav class="flex justify-between items-center text-golden p-5 rounded-4xl sticky top-0   border border-white/10">
       <div class="text-3xl font-semibold">SunCafe</div>
       <div class="flex space-x-16 font-semibold max-sm:hidden ">
